* removed clock only * updated README

--- a/settings/user.settings
+++ b/settings/user.settings
@@ -8,7 +8,993 @@ OffsetPosMod2=50.000000
 OffsetPosMod=1.000000
 [Horse]
 scaleHorsePanicBar=0.95
+tempXHorsePanicBar=197.5[EditMode]
+OffsetScaleMod=0.010000
+OffsetScale=0.050000
+Edit=false
+OffsetPos=5.000000
+OffsetScaleMod2=0.250000
+OffsetPosMod2=50.000000
+OffsetPosMod=1.000000
+[Horse]
+scaleHorsePanicBar=0.95
 tempXHorsePanicBar=197.5
+tempYHorsePanicBar=23
+tempYHorseStaminaBar=9
+scaleHorseStaminaBar=0.95
+tempXHorseStaminaBar=200
+[Gameplay/EntityPool]
+SpawnedLimit=150
+[OxygenandBoat]
+scaleOxygenBar=0.9
+tempYBoatHealth=300
+tempXOxygenBar=200
+tempXBoatHealth=9
+tempYOxygenBar=390
+scaleBoatHealth=0.75
+[SCOptionCE]
+EnAgg=5
+EDDN=15
+EDND=1
+[Hidden]
+SvscabEnabled=false
+SvswEnabled=true
+GlovesEnabled=true
+ShouldersGearEnabled=false
+BeardRefreshEnabled=true
+HideStscab=false
+Accessories6GearEnabled=false
+ArmsEnabled=false
+HasSeenGotyWelcomeMessage=true
+Accessories2GearEnabled=false
+Accessories8GearEnabled=false
+HasSetup=true
+Accessories4GearEnabled=false
+Accessories1GearEnabled=false
+FaceGearEnabled=false
+ChestEnabled=true
+LegsEnabled=true
+StSwordEnabled=false
+AltHairEnabled=false
+Accessories9GearEnabled=false
+Accessories5GearEnabled=false
+BanditMaskEnabled=false
+HideSvscab=false
+CLegsEnabled=false
+BootsEnabled=true
+AutohideEnabled=false
+CBootsEnabled=false
+StscabEnabled=false
+CrossbowEnabled=true
+FullBodyEnabled=false
+CapeEnabled=false
+StswEnabled=true
+WorldMapPreviewMode=2
+BodyEnabled=false
+Accessories10GearEnabled=false
+Accessories7GearEnabled=false
+CChestEnabled=false
+CGlovesEnabled=false
+HairEnabled=true
+SvSwordEnabled=false
+uiVerticalFrameScale=1
+uiHorizontalFrameScale=1
+HeadGearEnabled=false
+Accessories3GearEnabled=false
+HeadEnabled=true
+[AMMSvSwords]
+SvscabSelection=6
+SvscabEnabled=false
+HideSvscab=false
+SvSwordSelection=49
+SvSwordEnabled=false
+[SCOptionPrepMed]
+PrepTalents=false
+PrepHTimb=1
+PrepTimb=2
+PrepCamLock=false
+PrepUpgrade=false
+PrepMenu=1
+PrepLVL=false
+[Localization]
+RequestedSpeechLanguage=
+SpeechLanguage=EN
+RequestedTextLanguage=
+TextLanguage=EN
+Subtitles=false
+[Viewport]
+VSync=true
+Resolution="1920x1080"
+FullScreenMode=1
+VSyncThreshold=0
+OutputMonitor=0
+[W3IM_Time]
+iSecondsPerMinute=15
+bMilitaryTime=false
+[AMMSets]
+GlovesEnabled=true
+LegsSelection=10
+ChestEnabled=true
+LegsEnabled=true
+BootsSelection=9
+GlovesSelection=11
+ChestSelection=16
+BootsEnabled=true
+[SCOptionCR]
+RSAF=0
+RSAGD=0
+Finish=60
+Dism=100
+RSFV=1
+RSAGF=30
+[AMMHead]
+HairSelection=2
+FaceGearSelection=0
+BeardRefreshEnabled=true
+FaceGearEnabled=false
+AltHairEnabled=false
+BanditMaskEnabled=false
+HeadGearSelection=0
+HairEnabled=true
+BeardSelection=4
+HeadGearEnabled=false
+AltHairSelection=0
+[Hud]
+MinimapRotation=false
+NPCNames=false
+Minimap2Module=false
+MessageModule=false
+OnelinersModule=false
+ItemInfoModule=false
+HudSize=0
+QuestsModule=false
+BuffsModule=false
+MinimapPoiCompletedIcons=false
+DamagedItemsModule=false
+HorsePanicBarModule=false
+ConsoleModule=false
+MiminapPoiQuestionMarks=false
+WolfMedalion=false
+EnemyFocusModule=false
+EnemyHitEffects=false
+HorseStaminaBarModule=false
+MinimapTracksWaypoints=false
+ControlsFeedbackModule=false
+BoatHealthModule=false
+[SCOptionCE10]
+BlockHits4=0
+BlockHits5=100
+BlockHits12=34
+BlockHits6=25
+BlockHits11=0
+BlockHits7=35
+BlockHits10=0
+BlockHits1=0
+BlockHits8=15
+BlockHits2=100
+BlockHits9=20
+BlockHits3=50
+[SCOptionCE6]
+BlockHits4=-10
+BlockHits5=100
+BlockHits12=0
+BlockHits6=0
+BlockHits11=20
+BlockHits7=0
+BlockHits10=1
+BlockHits1=0
+BlockHits8=0
+BlockHits2=100
+BlockHits9=0
+BlockHits3=10
+[Budget]
+TerrainTileMipDataBudget=100
+TerrainTileMinTimeout=2
+DecalBudget=300
+TerrainTileTimeout=10
+OcclusionQueryAdditionalMemory=5
+TerrainTileLoadingTimeout=5
+[AMMRoachToggles]
+HideReins=true
+HideBags=true
+HideHair=false
+HideSaddle=true
+HideTrophy=true
+HideTail=false
+HideBlinders=true
+HideHarness=true
+[SCOptionCE1]
+BlockHits4=-10
+BlockHits5=50
+BlockHits12=10
+BlockHits6=10
+BlockHits11=0
+BlockHits7=15
+BlockHits10=0
+BlockHits1=0
+BlockHits8=0
+BlockHits2=50
+BlockHits9=0
+BlockHits3=30
+[SCOptionTox]
+residual_degeneration_rate=0.1
+standard_degeneration_rate=0.25
+accelerated_degeneration_threshold=0.25
+deccelerated_combat_degeneration=false
+combat_degeneration_rate=0
+accelerated_degeneration_rate=1.75
+[ContentManager/Mods]
+MaxNameLength=64
+Enabled=true
+[SCOptionPrepAlch]
+alchemy_anywhere=0
+potion_duration_multiplier=1
+alchemy_time_cost=8
+mutagen_mininum_potion_duration=0
+global_potion_duration=0
+mutagen_potion_duration=0
+max_bomb_count=0
+oil_minimum_duration=0
+global_mininum_potion_duration=240
+max_potion_count=0
+oil_duration_multiplier=1
+mutagen_duration_multiplier=1
+cooked_quantity=1
+distillation_time=35
+oil_duration=0
+fade_out_alchemy=1
+max_oil_count=0
+[SCOptionIN]
+InjMess=false
+InjChan=2
+InjPImm=false
+[ImmersiveCamPositionsSprint]
+sprintMode=1
+[SCOptionVisuals]
+SignIgniInt=0
+BloodSprayMaj=0
+BloodOnlyCrit=0
+BloodSpray=1
+BloodActiveRange=1
+BloodTrail=0
+BloodActive=1
+SignAardInt=0
+[SCOptionD]
+SpecterDam=1
+PDamB=1
+RelictDam=1
+PDam=1
+GriffinDam=1
+BeastDam=1
+PDOT=1.0
+PDamS=1
+CursedDam=1
+DraconidDam=1
+InsectoidDam=1
+EHeavyAPMult=1
+AnimalsDam=1
+PAPMult=1
+EDOT=1.0
+NekkerDam=1
+WildHuntDam=1
+HybridDam=1
+ELightAPMult=1
+ElementalDam=1
+VampireDam=1
+PDamC=1
+HumanDam=1
+EAPMult=1
+TrollDam=1
+NecroDam=1
+[Audio]
+MusicVolume=80
+Subtitles=true
+[AMMRoachBags]
+TrophiesEnabled=true
+BagsEnabled=true
+TrophiesSelection=0
+BagsSelection=2
+[SCOptionCE8]
+BlockHits4=50
+BlockHits5=85
+BlockHits12=30
+BlockHits6=10
+BlockHits11=100
+BlockHits7=25
+BlockHits10=1
+BlockHits1=0
+BlockHits8=0
+BlockHits2=35
+BlockHits9=0
+BlockHits3=20
+[SCOptionCM]
+LockonM=0
+Combatstate=1
+LockonMSF=0
+Lockon=0
+[LoadingScreen/TCR]
+ShowProgress=true
+[Game]
+DoNotPauseWhileStopped=false
+[fhudMisc]
+fhudWSensesSwitch=false
+fhudSilentJournalUpdates=true
+fhudDontTouchMySwords=true
+fhudDoNotShowDamage=true
+[AMMAcc]
+Accessories1GearSelection=11
+Accessories4GearSelection=21
+Accessories6GearEnabled=false
+Accessories2GearEnabled=false
+Accessories8GearEnabled=false
+Accessories5GearSelection=20
+Accessories4GearEnabled=false
+Accessories1GearEnabled=false
+Accessories3GearSelection=28
+Accessories9GearEnabled=false
+Accessories5GearEnabled=false
+Accessories2GearSelection=29
+Accessories10GearEnabled=false
+Accessories7GearEnabled=false
+Accessories3GearEnabled=false
+[Scripts]
+DebugScriptsForceFlush=true
+DebugScriptsLogDir=
+[PostProcess]
+SharpenAmount=0
+MotionBlurPositionTreshold=0.05
+AllowVignette=false
+MotionBlurRotationTreshold=1
+SSAOSolution=2
+[LFEmisc]
+LFEcraftPrice=1
+LFEdialog=0.3
+LFErepair=1.0
+LFEdiss=1.0
+LFEremup=1.0
+[Input]
+PadVibrationEnabled=true
+KeyboardCooldownSpeed=0.1
+InvertCameraXOnMouse=false
+InvertCameraYOnMouse=false
+CameraAutoRotX=true
+InvertCameraX=false
+UIMouseSensitivity=1
+CameraAutoRotY=true
+RightStickCameraSensitivity=1.29592
+InvertCameraY=false
+RightStickAimSensitivity=1.29592
+MouseSensitivity=1
+SteamController=0
+ForceDisablePad=false
+[fhudInteractions]
+fhudTalkButtonMode=3
+fhudHideNPCQuestMarkers=true
+fhudHideAnimalNames=true
+fhudInteractionButtonMode=3
+fhudHideWSInteractionIcons=true
+fhudTalkBubbleMode=3
+fhudHideMonsterNames=true
+fhudDisableAllInteractionPrompts=false
+fhudHideHerbNames=false
+fhudMaxDistanceToShowNames=3
+[DLC]
+DlcEnabled_ammhorsedlc=1
+DlcEnabled_ammdlc=1
+DlcEnabled_dlc_010_001=1
+DlcEnabled_dlc_015_001=1
+DlcEnabled_dlc_realweather=1
+DlcEnabled_dlc_005_001=1
+DlcEnabled_dlc_007_001=1
+DlcEnabled_dlc_013_001=1
+DlcEnabled_dlc_dlcgrass=1
+DlcEnabled_dlc_001_001=1
+DlcEnabled_dlc_008_001=1
+DlcEnabled_dlc_002_001=1
+DlcEnabled_dlc_animation_bottles=1
+DlcEnabled_ep1=1
+DlcEnabled_dlc_014_001=1
+DlcEnabled_dlc_009_001=1
+DlcEnabled_bob_000_000=1
+DlcEnabled_abob_001_001=1
+DlcEnabled_w3ee_dlc=1
+DlcEnabled_dlc_bootstrap=1
+DlcEnabled_full_metal_witcher=1
+DlcEnabled_dlc_012_001=1
+DlcEnabled_dlc_003_001=1
+[SCOptionCE7]
+BlockHits4=40
+BlockHits5=100
+BlockHits12=0
+BlockHits6=0
+BlockHits11=60
+BlockHits7=0
+BlockHits10=1
+BlockHits1=0
+BlockHits8=0
+BlockHits2=100
+BlockHits9=0
+BlockHits3=0
+[Global]
+scale=1.000000
+opacity=1.000000
+[EnhancedTargeting]
+ETMovementWeight=1.5
+ETDisableCameraLock=false
+ETHysteresis=1.05
+ETInFrameCheck=false
+ETFacingWeight=0
+ETSignsTowardsCamera=true
+ETCameraWeight=0.5
+[CAanimspeed]
+CAdblootstartsp=1
+CAdrinksp=1.0
+CAlootstartsp=1
+CAworkbenchsp=1.25
+CAgrindstonesp=1.0
+CAeatsp=1.0
+CAoilsp=1.5
+[SCOptionEx]
+SStamUsage=1
+SStamIndoor=true
+SStamDelExpl=3
+SStamWitSen=true
+SStamDelComb=2
+SStamInstDr=false
+HorseSprinting=true
+FallingDamage=true
+[SCOptionE]
+GoldMult=1.0
+[AMMRoachReins]
+ReinsEnabled=true
+HarnessEnabled=false
+HarnessSelection=1
+ReinsSelection=1
+[Gameplay]
+MotionSicknessFocusMode=true
+DisableAutomaticSwordSheathe=true
+Difficulty=4
+HudTutorialEnabled=false
+EnableUberMovement=1
+AutoCameraCenter=false
+[SCOptionCW]
+RDSCB=0.5
+ASDPH=10
+ASHAN=1
+FASC=6
+RDSCD=0.9
+ASDPS=10
+SASC=9
+ASCL=0
+ASDRN=1
+RDSCH=1.1
+ASC=0
+RDSC=0.8
+ASSD=1
+BLSC=5
+RDSCC=0.8
+ASFAN=1
+COSC=8
+EVSC=6
+[SCOptionCE9]
+BlockHits4=40
+BlockHits5=100
+BlockHits12=25
+BlockHits6=10
+BlockHits11=50
+BlockHits7=20
+BlockHits10=0
+BlockHits1=0
+BlockHits8=0
+BlockHits2=50
+BlockHits9=0
+BlockHits3=0
+[Buffs]
+scaleBuffs=0.85
+BuffsMinimal=0
+tempYBuffsRM=375
+tempXBuffsRM=0
+tempYBuffs=23
+tempXBuffs=1
+[SCOptionInv]
+WMoney=true
+CInvent=false
+WMisc=true
+CWGeralt=75
+WAlch=true
+CWHorse=250
+HorseInv=false
+WQuest=true
+[LevelOfDetail]
+SwarmHideDistance=200
+DecalsHideDistance=80
+DimmerHideDistance=60
+DynamicDecalsHideDistance=20
+StripeHideDistance=60
+[SCOptionCP]
+CTM=0
+CTHH=1
+CTHSH=1
+CTH=1
+CTMH=0
+[General]
+ConfigVersion=2
+[CAanim]
+CAeat=0
+CAworkbench=1
+CAgrindstone=1
+CAdrink=0
+CAloot=1
+CAoil=true
+[SCOptionCE4]
+BlockHits4=40
+BlockHits5=90
+BlockHits12=40
+BlockHits6=25
+BlockHits11=0
+BlockHits7=30
+BlockHits10=0
+BlockHits1=0
+BlockHits8=25
+BlockHits2=60
+BlockHits9=50
+BlockHits3=0
+[LoadingScreen/Editor]
+Disabled=false
+[fhudMainMenu]
+fhudHideDLC=true
+fhudMainMenuMode=0
+[LoadingOverlay/TCR]
+FadeOutCooldownExtraTime=1
+FadeInSpinnerTime=1
+NoninteractiveSpinnerTime=3
+FadeOutSpinnerTime=1
+NoninteractiveEndCooldown=1
+[AMMStSwords]
+HideStscab=false
+StSwordEnabled=false
+StscabSelection=2
+StscabEnabled=false
+StSwordSelection=17
+[AMMCape]
+ShouldersGearEnabled=false
+ArmsEnabled=false
+ArmsSelection=0
+ShouldersGearSelection=0
+CapeSelection=0
+CapeEnabled=false
+[ImmersiveCamPositionsHorse]
+hbAutoRot=3.0
+[Visuals]
+AllowClothSimulationOnGpu=false
+InventoryBgColorScaleB=0.036
+InventoryFixedLuminance=0.25
+InventoryBgColorScaleG=0.034
+MovieFramerate=60
+GammaValue=1
+InventoryBgColorScaleR=0.02
+[LFEdur]
+LFEdur90=0.9
+LFEdur100=0.95
+LFEdur75=0.75
+LFEdur50=0.0
+[Rendering]
+GrassDensity=3600
+DecalsSpawnDistanceCutoff=10
+GlobalOceanTesselationFactor=64
+CascadeShadowFadeTreshold=1
+HairWorksGlobalWidthLimit=2.25
+CascadeShadowDistanceScale2=2.5
+MaxTextureAnizotropy=0
+DynamicDecalsChunkLimit=300
+HairWorksGlobalStrandSmoothness=2
+HairWorksGlobalDensityQuality=0.75
+TextureMemoryBudget=2048
+CascadeShadowDistanceScale3=2
+HairWorkstGlobalDensityLimit=0.35
+TextureStreamingHeadsDistanceLimitSq=100
+MeshLODDistanceScale=1
+ScaleformTextureUnstreamDelay=2.5
+DecalsChance=1
+TerrainReadAheadDistance=200
+HairWorksLevel=0
+TerrainScreenSpaceErrorThreshold=1.6
+TerrainScreenSpaceErrorThresholdFar=3.5
+TextureStreamingCharacterDistanceLimitSq=225
+MaxTerrainShadowAtlasCount=4
+TextureStreamingDistanceLimitSq=40000
+HairWorksGlobalDetailLODFactor=0.65
+TextureMipBias=-1
+DynamicDecalsLimit=300
+TextureInFlightBudget=128
+TextureInFlightCountBudget=12
+PreserveSystemGamma=false
+TerrainErrorMetricMultiplier=6
+CascadeShadowmapSize=2048
+CascadeShadowDistanceScale0=3
+MeshRenderingDistanceScale=1
+CascadeShadowQuality=1
+CharacterShadowsFallbackDistance=40
+HairWorksAALevel=0
+CascadeShadowDistanceScale1=3
+[Enemy]
+EnemyONOFF=false
+tempYEnemy=350
+tempXEnemy=200
+[HorseWhistling]
+IHW_SignPosts=true
+IHW_Camps=true
+IHW_Geralt=5
+IHW_Active=false
+[SCOptionCE5]
+BlockHits4=25
+BlockHits5=95
+BlockHits12=50
+BlockHits6=30
+BlockHits11=30
+BlockHits7=30
+BlockHits10=0
+BlockHits1=0
+BlockHits8=70
+BlockHits2=75
+BlockHits9=80
+BlockHits3=0
+[Input/Gestures]
+EnableSwipe=true
+EnablePan=true
+EnableGestures=true
+EnablePinch=true
+[fhudMap]
+fhudMinimapZoomExterior=0.5
+fhudMapZoomMaxCoef=0.5
+fhudMapZoomMinCoef=2.5
+fhudMapUnlimitedZoom=true
+fhudMinimapZoomInterior=1
+fhudMinimapZoomBoat=0.5
+[AMM]
+SvswEnabled=true
+AMMDisabled=false
+HeadGearToggle=true
+AutohideEnabled=false
+CrossbowEnabled=true
+StswEnabled=true
+BodyEnabled=false
+HeadEnabled=true
+CapeToggle=true
+[SCOptionH]
+ElementalHP=1
+HumanHP=1
+AnimalsHP=1
+CursedHP=1
+HybridHP=1
+PlayerHP=1
+WildHuntHP=1
+TrollHP=1
+NecroHP=1
+InsectoidHP=1
+BeastHP=1
+NekkerHP=1
+RelictHP=1
+VampireHP=1
+SpecterHP=1
+DraconidHP=1
+GriffinHP=1
+[All]
+isModOn=true
+[ItemInfo]
+tempXItemInfo=23
+tempXDamagedItems=7
+tempYDamagedItems=340
+scaleItemInfo=0.85
+scaleDamagedItems=0.75
+tempYItemInfo=37
+[SCOptionCA]
+ADRGenD=2.5
+ADRDegHH=10
+ADRP=3
+ADRDegH=10
+AdrVigInt=20
+ADRGenH=1.0
+ADRDegHSH=6.7
+[IceBreathSettings]
+ConditionSelection=0
+[LoadingScreen]
+FadeInTime=3
+SkipShowWithAnyKey=true
+GameRevealTime=3
+SkipHideDelay=3
+SkipInputDelay=0.25
+FadeOutTime=1.5
+SkipAutoshow=false
+[fhudQuickItems]
+fhudEnableWASD=false
+fhudEnableItemsInRadialMenu=false
+fhudRadialMenuTimescale=0.05
+fhudCycleThroughBuffs=true
+fhudApplyOilToDrawnSword=true
+fhudShowItemsInSlowdownMode=false
+fhudDefaultDisplayMode=3
+[LFEq]
+LFEqMaster=1
+LFEqMagic=1
+LFEqWitcher=1
+LFEqCommon=1
+LFEqRelic=1
+[SCOptionCWh]
+WhDM=0.8
+WhSU=0.4
+[CAsettings]
+CAanimcombat=true
+CAoilcombat=true
+CAversion=2.300000
+CAinit=true
+CAautooil=true
+CAautogrind=true
+CAinv=true
+[Engine]
+LimitFPS=60
+[SCOptionSkills]
+SkillRateGrasses=1.0
+SkillRateGeneral=1.0
+SkillRateIgni=1.0
+SkillRateBombs=1.0
+SlotsUnlocked=false
+SkillRateYrden=1.0
+SkillRateAxii=1.0
+SkillRateUtility=1.0
+SkillRateOils=1.0
+SkillRatePotions=1.0
+SkillRateQuen=1.0
+VersionNr=3.07
+PointReq=false
+SkillRateFast=1.0
+SkillRateMutagens=1.0
+SkillRateCrossbow=1.0
+SkillRateAard=1.0
+SkillRateStrong=1.0
+MutsUnlocked=false
+SkillRateTrance=1.0
+SPG=1
+[ControlsandConsole]
+tempXConsole=21
+scaleControlsFeedback=0.75
+tempXControlsFeedback=382
+scaleConsole=1.05
+tempYControlsFeedback=22
+tempYConsole=200
+[ImmersiveCam]
+hlDepth=2
+igniSlowMoFactor=0.5
+eWSDepth=2.3
+atHeight=-0.1
+sailDepth=1.9
+atRotate=false
+aardSlowMoFactor=0.5
+intDepth=2.0
+hbFOV=60
+CritSloMoCam=false
+dodgeRollSlowMoFactor=1
+hlHeight=0.0
+comLock=true
+criticalHitSlowMoFactor=0.2
+clueHeight=-1.5
+hbDistance=2
+hlOffset=0.6
+iWSHeight=0.2
+WitcherSenseZoom=true
+criticalHitSlowMoChance=50
+fsDepth=-0.5
+hbDepth=0
+sprintAutoRot=true
+expAutoRot=false
+hbGallopDis=2.5
+hbHeight=0
+hbOffset=0
+intHTDis=2.5
+eWSOffset=0.6
+Headtracking=true
+atOffset=0.7
+hbCanterDis=2.5
+eWSHeight=0.2
+sailHeight=0.3
+fsOffset=0.95
+comOffset=0.3
+expOffset=0.7
+clueDepth=4
+expDepth=2.49
+intOffset=0.3
+noInteriorCamChange=true
+dismemberSlowMoFactor=0.2
+clueOffset=0.6
+sprintDepth=0
+atDepth=-0.6
+evadeStepSlowMoFactor=1
+extHTDis=4
+iWSDepth=2.4
+v42Initialized=true
+fsHeight=0
+comHeight=0.0
+iWSOffset=0.6
+sailAutoRot=true
+expHeight=0.15
+intHeight=0.2
+sailOffset=0.2
+counterAttackSlowMoFactor=0.5
+comDepth=1.5
+sprintOffset=0
+sailPitch=25
+expFOV=60
+sprintHeight=0
+hbCombatDis=2.8
+[fhudMarkers]
+fhudMarkerHideActivities=true
+fhud3DMarkersEnabled=false
+fhudMarkerMinDistance=4
+fhudCompassMarkersEnabled=false
+fhudMarkersDescriptionTextSize=15
+fhudDoNotShowDistance=false
+fhudMarkersDistanceTextSize=15
+fhudCompassScreenPosY=1
+fhudMarkersFadeOutDelay=3
+fhudMarkersDisplayMode=2
+fhudMarkersAltTextSize=15
+fhudMarkerMaxDistance=100
+fhudProject3DMarkersOnCompass=true
+fhudMarkerOnScreenOnly=false
+fhudMarkerShowUndiscoveredRoadsigns=false
+fhudImmersive3DMarker=true
+fhudQuestMarkersEnabled=true
+fhudMarkersIconSizePrc=50
+fhudCompassMarkersTop=false
+[Rendering/SpeedTree]
+GrassGenerationEfficiency=0.075
+GrassDistanceScale=2.4
+FoliageDistanceScale=1.8
+FoliageShadowDistanceScale=64
+GrassRingSize=67108864
+[SCOptionCE2]
+BlockHits4=10
+BlockHits5=80
+BlockHits12=20
+BlockHits6=15
+BlockHits11=20
+BlockHits7=20
+BlockHits10=1
+BlockHits1=0
+BlockHits8=0
+BlockHits2=50
+BlockHits9=3
+BlockHits3=15
+[fhudHUD]
+fhudEnableRadialMenuModules=true
+fhudEnableWolfModuleOnVitalityChanged=false
+fhudHideJournalUpdates=true
+fhudFadeOutTimeSeconds=3.2
+fhudEnableWolfModuleOnVigorChanged=false
+fhudEnableCombatModules=true
+fhudEnableWitcherSensesModules=true
+fhudEnableMeditationModules=true
+fhudEnableCombatModulesOnUnsheathe=false
+fhudEnableWolfModuleOnStaminaChanged=false
+[Gameplay/BoatCamera]
+BoatLocalSpaceCamera=false
+[SCOptionRend]
+ReDPS=2
+ReSU=1.0
+ReDM=1.0
+[WolfMedallion]
+tempYWolfHead=379
+scaleWolfHead=0.8
+tempXWolfHead=43
+[AMMCSets]
+CLegsSelection=1
+CLegsEnabled=false
+CBootsEnabled=false
+CChestEnabled=false
+CGlovesEnabled=false
+[AMMRoachAcc]
+Acc1Selection=0
+Acc1Enabled=false
+[SCOptionAnims]
+AnimCombat=1
+AnimLoot=1
+AnimOil=1
+AnimDrink=1
+AnimEat=1
+[Save]
+ShowCompatWarning=false
+[LFEsb]
+LFEsbSell=0.5
+LFEsbBuy=1
+[SCOptionCE3]
+BlockHits4=20
+BlockHits5=90
+BlockHits12=0
+BlockHits6=20
+BlockHits11=30
+BlockHits7=25
+BlockHits10=1
+BlockHits1=0
+BlockHits8=5
+BlockHits2=60
+BlockHits9=15
+BlockHits3=5
+[ThoughtfulRoach]
+ParkingOption=2
+ToggleFollow=true
+InterruptParking=true
+[MinimapandQuests]
+tempYMinimap2=352
+scaleQuests=1.0
+tempXMinimap2=383
+tempXQuests=377
+tempYQuests=285
+scaleMinimap2=0.9
+[LFEcat]
+LFEcatBoots=1.0
+LFEcatFood=0.25
+LFEcatSteel=1
+LFEcatDiagram=1
+LFEcatBomb=0.0
+LFEcatArmor=1
+LFEcatHorseBag=1.0
+LFEcatUpgrade=1
+LFEcatPotion=0.0
+LFEcatGloves=1.0
+LFEcatSilver=1
+LFEcatPants=1
+LFEcatAlchemy=0.35
+LFEcatMisc=0.2
+LFEcatCraft=1.0
+LFEcatDye=1.0
+LFEcatBook=0.5
+LFEcatBolt=1
+LFEcatTool=1.0
+LFEcatOil=0.0
+LFEcatTrophy=0.5
+LFEcatBow=1
+LFEcatUse=1.0
+LFEcatJunk=0.1
+[BossandComp]
+tempYComp=340
+scaleComp=0.9
+scaleBoss=0.8
+tempYBoss=388
+tempXBoss=200
+tempXComp=33
+[W3IM_UI]
+bToggleHealthbarOff=true
+[Kinect]
+Kinect=false
+[AMMRoachHorse]
+HorseSelection=0
+HairsSelection=0
+TailsSelection=0
+TailsEnabled=false
+HorseEnabled=true
+HairsEnabled=false
+[Foliage]
+MaxVisibilityDepth=24
+[AMMWH]
+FullBodyEnabled=false
+[fhudInventory]
+fhudShowTrueItemPrice=true
+fhudResetNewItemsEdibles=true
+fhudResetNewItemsQuest=true
+fhudResetNewItemsAlchemy=true
+fhudShowStashItemQuantity=true
+fhudShowRecyclingParts=true
+fhudResetNewItemsRoach=true
+fhudResetNewItemsIngredients=true
+fhudShowItemCountWhenCrafting=true
+fhudResetNewItemsOthers=true
+fhudResetNewItemsEquipment=false
+[AMMRoachSaddle]
+SaddleSelection=4
+BlindersEnabled=false
+BlindersSelection=6
+SaddleEnabled=true
+
 tempYHorsePanicBar=23
 tempYHorseStaminaBar=9
 scaleHorseStaminaBar=0.95
