* Changed horse controls * Adjusted weather probability and wind scale for WLM * Removed sword trails and sparks * Updated recommended mods

--- a/settings/custom/input.settings
+++ b/settings/custom/input.settings
@@ -79,7 +79,7 @@ IK_NumPad1=(Action=DrinkPotion1)
 IK_RightMouse=(Action=Focus,Reprocess)
 
 [BASE_INTERACTIONS_HORSE]
-IK_LShift=(Action=Follow)
+IK_None=(Action=Follow)
 
 [BASE_INTERACTIONS_KEYBOARD]
 IK_E=(Action=Finish)
@@ -1208,14 +1208,18 @@ IK_Backspace=(Action=FastMenu)
 IK_Backspace=(Action=HoldFastMenu,State=Duration,IdleTime=0.2)
 
 [Horse]
+IK_S=(Action=GI_AxisLeftY,State=Axis,Value=-1)
+IK_S=(Action=SlowDown)
+IK_S=(Action=SlowDownFast,State=Duration,IdleTime=0.3)
+IK_W=(Action=GI_AxisLeftY,State=Axis,Value=1)
+IK_W=(Action=Canter)
+IK_LShift=(Action=Gallop,State=Duration,IdleTime=0.3)
+IK_LShift=(Action=PinModuleModfier)
+
 IK_Tab=(Action=RadialMenu)
 IK_F10=(Action=ToggleEssentials)
 IK_F11=(Action=PauseGameToggle)
 IK_Home=(Action=ToggleHud)
-IK_LShift=(Action=Follow)
-IK_LShift=(Action=Gallop,State=Duration,IdleTime=0.3)
-IK_LShift=(Action=Canter)
-IK_LShift=(Action=PinModuleModfier)
 IK_Mouse4=(Action=Nightsight)
 IK_Mouse5=(Action=HorseDismount)
 IK_2=(Action=SteelSword)
@@ -1273,7 +1277,6 @@ IK_NumPad3=(Action=DrinkPotion3)
 IK_NumPad3=(Action=DrinkPotion3)
 IK_NumPad4=(Action=DrinkPotion4)
 IK_NumPad4=(Action=DrinkPotion4)
-IK_S=(Action=GI_AxisLeftY,State=Axis,Value=-1)
 IK_NumPad5=(Action=DrinkPotion5)
 IK_NumPad6=(Action=DrinkPotion6)
 IK_MouseX=(Action=GI_MouseDampX)
@@ -1283,12 +1286,19 @@ IK_None=(Action=Debug_KillAllEnemies)
 IK_NumPad7=(Action=DrinkPotion7)
 IK_MouseY=(Action=GI_MouseDampY)
 IK_NumPad8=(Action=DrinkPotion8)
-IK_W=(Action=GI_AxisLeftY,State=Axis,Value=1)
 IK_X=(Action=Stop)
 IK_Z=(Action=CameraLock)
 IK_Z=(Action=GatherHerbsHorse)
 
 [Horse_Replacer_Ciri]
+IK_S=(Action=GI_AxisLeftY,State=Axis,Value=-1)
+IK_S=(Action=SlowDown)
+IK_S=(Action=SlowDownFast,State=Duration,IdleTime=0.3)
+IK_W=(Action=GI_AxisLeftY,State=Axis,Value=1)
+IK_W=(Action=Canter)
+IK_LShift=(Action=Gallop,State=Duration,IdleTime=0.3)
+IK_LShift=(Action=PinModuleModfier)
+
 IK_Tab=(Action=RadialMenu)
 IK_F10=(Action=ToggleEssentials)
 IK_F11=(Action=PauseGameToggle)
@@ -1300,9 +1310,7 @@ IK_F2=(Action=QuestMarkersToggle)
 IK_Enter=(Action=HubMenu)
 IK_Enter=(Action=HoldToSeeEssentials)
 IK_F3=(Action=UserMarkersToggle)
-IK_LShift=(Action=Follow)
 IK_LShift=(Action=Gallop,State=Duration,IdleTime=0.3)
-IK_LShift=(Action=Canter)
 IK_LShift=(Action=PinModuleModfier)
 IK_None=(Action=Debug_TeleportToPin)
 IK_None=(Action=Debug_KillTarget)
@@ -1332,10 +1340,8 @@ IK_O=(Action=PanelCrafting)
 IK_O=(Action=PanelFakeHud)
 IK_P=(Action=DebugInput)
 IK_Home=(Action=ToggleHud)
-IK_S=(Action=GI_AxisLeftY,State=Axis,Value=-1)
 IK_MouseX=(Action=GI_MouseDampX)
 IK_MouseY=(Action=GI_MouseDampY)
-IK_W=(Action=GI_AxisLeftY,State=Axis,Value=1)
 IK_X=(Action=Stop)
 IK_Z=(Action=CameraLock)
 IK_PageUp=(Action=RefreshAP)
