updated custom settings

--- a/settings/custom/user.settings
+++ b/settings/custom/user.settings
@@ -27,7 +27,7 @@ EnAgg=5
 EDDN=15
 EDND=1
 [W3CT_Time]
-iSecondsPerMinute=15
+iSecondsPerMinute=12
 bMilitaryTime=false
 [Hidden]
 SvswEnabled=true
@@ -41,6 +41,7 @@ AltHairEnabled=false
 BootsEnabled=true
 CapeEnabled=false
 StswEnabled=true
+WorldMapPreviewMode=1
 CChestEnabled=false
 HairEnabled=true
 uiVerticalFrameScale=1
@@ -114,6 +115,7 @@ OnelinersModule=false
 ItemInfoModule=false
 HudSize=0
 QuestsModule=false
+BuffsModule=false
 MinimapPoiCompletedIcons=false
 DamagedItemsModule=false
 HorsePanicBarModule=false
@@ -163,7 +165,7 @@ TerrainTileLoadingTimeout=5
 HideReins=false
 HideBags=true
 HideSaddle=true
-HideTrophy=true
+HideTrophy=false
 HideBlinders=true
 HideHarness=false
 [SCOptionCE1]
@@ -393,7 +395,7 @@ ResetNewestItemsOnLoad=false
 ShowNewestItems=true
 [EnhancedTargeting]
 ETMovementWeight=1.5
-ETDisableCameraLock=true
+ETDisableCameraLock=false
 ETHysteresis=1.05
 ETInFrameCheck=false
 ETFacingWeight=0
@@ -415,6 +417,7 @@ MotionSicknessFocusMode=true
 DisableAutomaticSwordSheathe=true
 Difficulty=4
 EnableUberMovement=1
+AutoCameraCenter=false
 [W3CT_UI]
 bToggleHealthbarOff=true
 [SCOptionCW]
@@ -695,7 +698,7 @@ fhudEnableItemsInRadialMenu=true
 fhudRadialMenuTimescale=0.05
 fhudCycleThroughBuffs=true
 fhudApplyOilToDrawnSword=true
-fhudDefaultDisplayMode=0
+fhudDefaultDisplayMode=3
 [LFEq]
 LFEqMaster=1
 LFEqMagic=1
@@ -739,7 +742,7 @@ scaleConsole=1.0
 tempYControlsFeedback=41
 tempYConsole=149
 [ImmersiveCam]
-hlDepth=4.0
+hlDepth=2.5
 eWSDepth=2.6
 atHeight=0.22
 sailDepth=1.9
@@ -749,22 +752,22 @@ hbFOV=60
 hlHeight=0.0
 comLock=true
 clueHeight=-1.5
-hbDistance=2.5
-hlOffset=0.6
+hbDistance=2.8
+hlOffset=0.3
 iWSHeight=0.2
 WitcherSenseZoom=true
 fsDepth=-0.5
 hbDepth=0
 sprintAutoRot=true
 expAutoRot=false
-hbGallopDis=2.5
+hbGallopDis=2.8
 hbHeight=0
 hbOffset=0
-intHTDis=2.5
+intHTDis=1.5
 eWSOffset=0.6
-Headtracking=true
+Headtracking=false
 atOffset=0.43
-hbCanterDis=2.5
+hbCanterDis=2.8
 eWSHeight=0.2
 sailHeight=0.3
 fsOffset=0.95
@@ -777,7 +780,7 @@ noInteriorCamChange=true
 clueOffset=0.6
 sprintDepth=0
 atDepth=0.52
-extHTDis=4
+extHTDis=1.5
 iWSDepth=2.4
 v42Initialized=true
 fsHeight=0
@@ -787,7 +790,7 @@ sailAutoRot=true
 expHeight=0.15
 intHeight=0.2
 sailOffset=0.2
-comDepth=2.0
+comDepth=2.5
 sprintOffset=0
 sailPitch=25
 expFOV=60
@@ -857,7 +860,7 @@ fhudEnableWolfModuleOnVigorChanged=true
 fhudEnableCombatModules=true
 fhudEnableWitcherSensesModules=true
 fhudEnableMeditationModules=true
-fhudEnableCombatModulesOnUnsheathe=false
+fhudEnableCombatModulesOnUnsheathe=true
 fhudEnableWolfModuleOnStaminaChanged=false
 [Gameplay/BoatCamera]
 BoatLocalSpaceCamera=false
@@ -908,10 +911,10 @@ BlockHits9=15
 BlockHits3=15
 [MinimapandQuests]
 tempYMinimap2=353
-scaleQuests=1.0
+scaleQuests=0.9
 tempXMinimap2=382
 tempXQuests=375
-tempYQuests=273
+tempYQuests=290
 scaleMinimap2=0.85
 [LFEcat]
 LFEcatBoots=1
