* Added Bootstrap * Added Random Encounters * Updated recommended mods

--- a/settings/custom/user.settings
+++ b/settings/custom/user.settings
@@ -32,7 +32,7 @@ bMilitaryTime=false
 [Hidden]
 SvswEnabled=true
 GlovesEnabled=true
-BeardRefreshEnabled=false
+BeardRefreshEnabled=true
 HasSetup=true
 Accessories1GearEnabled=true
 ChestEnabled=true
@@ -67,7 +67,7 @@ RequestedTextLanguage=
 TextLanguage=EN
 Subtitles=false
 [Viewport]
-VSync=true
+VSync=false
 Resolution="1920x1080"
 FullScreenMode=1
 VSyncThreshold=0
@@ -90,12 +90,12 @@ RSFV=1
 RSAGF=30
 [AMMHead]
 HairSelection=2
-BeardRefreshEnabled=false
+BeardRefreshEnabled=true
 FaceGearEnabled=
 AltHairEnabled=false
 BanditMaskEnabled=
 HairEnabled=true
-BeardSelection=3
+BeardSelection=0
 HeadGearEnabled=
 AltHairSelection=0
 [MoreQuickSlotsGamepad]
@@ -193,6 +193,10 @@ accelerated_degeneration_rate=1.75
 [ContentManager/Mods]
 MaxNameLength=64
 Enabled=true
+[RandomEncountersMENU]
+Difficulty=1
+dayFrequency=2
+nightFrequency=2
 [SCOptionPrepAlch]
 alchemy_anywhere=0
 potion_duration_multiplier=1
@@ -229,33 +233,34 @@ BloodTrail=0
 BloodActive=1
 SignAardInt=0
 [SCOptionD]
-SpecterDam=1
-PDamB=1
-RelictDam=1
-PDam=1
-GriffinDam=1
-BeastDam=1
+SpecterDam=1.0
+PDamB=1.0
+RelictDam=1.0
+PDam=1.0
+GriffinDam=1.0
+BeastDam=1.0
 PDOT=1.0
-PDamS=1
-CursedDam=1
-DraconidDam=1
-InsectoidDam=1
-EHeavyAPMult=1
-AnimalsDam=1
-PAPMult=1
+PDamS=1.0
+CursedDam=1.0
+DraconidDam=1.0
+InsectoidDam=1.0
+EHeavyAPMult=1.0
+AnimalsDam=1.0
+PAPMult=1.0
 EDOT=1.0
-NekkerDam=1
-WildHuntDam=1
-HybridDam=1
-ELightAPMult=1
-ElementalDam=1
-VampireDam=1
-PDamC=1
-HumanDam=1
-EAPMult=1
-TrollDam=1
-NecroDam=1
+NekkerDam=1.0
+WildHuntDam=1.0
+HybridDam=1.0
+ELightAPMult=1.0
+ElementalDam=1.0
+VampireDam=1.0
+PDamC=1.0
+HumanDam=1.0
+EAPMult=1.0
+TrollDam=1.0
+NecroDam=1.0
 [Audio]
+MusicVolume=85
 Subtitles=true
 [AMMRoachBags]
 BagsEnabled=true
@@ -306,6 +311,7 @@ DebugScriptsLogDir=
 [PostProcess]
 SharpenAmount=1
 MotionBlurPositionTreshold=0.05
+AllowVignette=false
 MotionBlurRotationTreshold=1
 SSAOSolution=2
 [LFEmisc]
@@ -364,6 +370,7 @@ DlcEnabled_wolfie_dlc=1
 DlcEnabled_bob_000_000=1
 DlcEnabled_abob_001_001=1
 DlcEnabled_w3ee_dlc=1
+DlcEnabled_dlc_bootstrap=1
 DlcEnabled_full_metal_witcher=1
 DlcEnabled_dlc_012_001=1
 DlcEnabled_dlc_003_001=1
@@ -394,13 +401,13 @@ SortBooksByName=false
 ResetNewestItemsOnLoad=false
 ShowNewestItems=true
 [EnhancedTargeting]
-ETMovementWeight=1.5
+ETMovementWeight=1.50
 ETDisableCameraLock=false
 ETHysteresis=1.05
 ETInFrameCheck=false
-ETFacingWeight=0
+ETFacingWeight=0.00
 ETSignsTowardsCamera=true
-ETCameraWeight=0.5
+ETCameraWeight=0.50
 [SCOptionEx]
 SStamUsage=1
 SStamIndoor=0
@@ -416,6 +423,7 @@ ReinsSelection=0
 MotionSicknessFocusMode=true
 DisableAutomaticSwordSheathe=true
 Difficulty=4
+AutosaveTimeInterval=5
 EnableUberMovement=1
 AutoCameraCenter=false
 [W3CT_UI]
@@ -574,7 +582,7 @@ LFEdur100=0.9
 LFEdur75=0.6
 LFEdur50=0.2
 [Rendering]
-GrassDensity=3600
+GrassDensity=2400
 DecalsSpawnDistanceCutoff=10
 GlobalOceanTesselationFactor=64
 CascadeShadowFadeTreshold=1
@@ -588,7 +596,7 @@ TextureMemoryBudget=2048
 CascadeShadowDistanceScale3=2
 HairWorkstGlobalDensityLimit=0.35
 TextureStreamingHeadsDistanceLimitSq=100
-MeshLODDistanceScale=1
+MeshLODDistanceScale=10
 ScaleformTextureUnstreamDelay=2.5
 DecalsChance=1
 TerrainReadAheadDistance=200
@@ -650,23 +658,23 @@ StswEnabled=true
 BodyEnabled=
 HeadEnabled=true
 [SCOptionH]
-ElementalHP=1
-HumanHP=1
-AnimalsHP=1
-CursedHP=1
-HybridHP=1
-PlayerHP=1
-WildHuntHP=1
-TrollHP=1
-NecroHP=1
-InsectoidHP=1
-BeastHP=1
-NekkerHP=1
-RelictHP=1
-VampireHP=1
-SpecterHP=1
-DraconidHP=1
-GriffinHP=1
+ElementalHP=1.0
+HumanHP=1.0
+AnimalsHP=1.0
+CursedHP=1.0
+HybridHP=1.0
+PlayerHP=1.0
+WildHuntHP=1.0
+TrollHP=1.0
+NecroHP=1.0
+InsectoidHP=1.0
+BeastHP=1.0
+NekkerHP=1.0
+RelictHP=1.0
+VampireHP=1.0
+SpecterHP=1.0
+DraconidHP=1.0
+GriffinHP=1.0
 [All]
 isModOn=true
 [ItemInfo]
@@ -676,6 +684,12 @@ tempYDamagedItems=240
 scaleItemInfo=0.95
 scaleDamagedItems=0.9
 tempYItemInfo=57
+[encounterChanceNight]
+enableGroupMonsters=4
+enableWildHunt=4
+enableHumanEnemies=3
+enableFlyingMonsters=2
+enableGroundMonsters=6
 [SCOptionCA]
 ADRGenD=1.0
 ADRDegHH=10
@@ -834,7 +848,7 @@ fhudMarkersTransparency=0
 fhudMarkersShowQuests=2
 [Rendering/SpeedTree]
 GrassGenerationEfficiency=0.075
-GrassDistanceScale=2.4
+GrassDistanceScale=2
 FoliageDistanceScale=1.8
 FoliageShadowDistanceScale=64
 GrassRingSize=67108864
@@ -909,6 +923,50 @@ BlockHits8=5
 BlockHits2=60
 BlockHits9=15
 BlockHits3=15
+[monsterList]
+Endrega=1
+NightWraiths=1
+Centipede=false
+Wight=1
+Cyclops=0
+Forktails=1
+Wolves=1
+Sharley=false
+Echinops=false
+Wyverns=1
+Leshens=1
+Hags=1
+Cockatrice=1
+Panther=1
+Spiders=1
+Wraiths=1
+Fogling=1
+Rotfiends=1
+Fiends=0
+Ghouls=1
+Barghest=false
+Drowners=1
+Bears=1
+Garkain=false
+Fleder=false
+Harpies=0
+Arachas=1
+HigherVamp=0
+Elementals=0
+Troll=0
+Boars=1
+Nekkers=1
+Vampires=false
+NoonWraiths=1
+Alghouls=1
+Gryphons=1
+Giant=0
+Kikimore=false
+Skeleton=1
+DrownerDLC=false
+Bruxa=false
+Golems=0
+Werewolves=1
 [MinimapandQuests]
 tempYMinimap2=353
 scaleQuests=0.9
@@ -948,6 +1006,12 @@ scaleBoss=1.0
 tempYBoss=381.5
 tempXBoss=200
 tempXComp=45
+[encounterChanceDay]
+enableGroupMonsters=3
+enableWildHunt=0
+enableHumanEnemies=4
+enableFlyingMonsters=3
+enableGroundMonsters=2
 [Kinect]
 Kinect=true
 [Foliage]
