- Added a keybind for toggling the auto follow roads option - Added a keybind for temporarily disabling horse's auto correction

--- a/settings/custom/input.settings
+++ b/settings/custom/input.settings
@@ -1212,8 +1212,6 @@ IK_Tab=(Action=RadialMenu)
 IK_F10=(Action=ToggleEssentials)
 IK_F11=(Action=PauseGameToggle)
 IK_Home=(Action=ToggleHud)
-IK_LShift=(Action=PinModuleModfier)
-IK_LShift=(Action=Gallop,State=Duration,IdleTime=0.3)
 IK_Mouse4=(Action=Nightsight)
 IK_Mouse5=(Action=HorseDismount)
 IK_2=(Action=SwordSheatheSteel,State=Duration,IdleTime=0.3)
@@ -1288,7 +1286,9 @@ IK_W=(Action=GI_AxisLeftY,State=Axis,Value=1)
 IK_X=(Action=Stop)
 IK_Z=(Action=GatherHerbsHorse)
 IK_Z=(Action=CameraLock)
-IK_LControl=(Action=FollowRoadToggle)
+IK_LShift=(Action=PinModuleModfier)
+IK_LShift=(Action=BlockCorrection)
+IK_LControl=(Action=ToggleAutoFollowRoad)
 
 [Horse_Replacer_Ciri]
 IK_Tab=(Action=RadialMenu)
@@ -1302,10 +1302,6 @@ IK_F2=(Action=QuestMarkersToggle)
 IK_Enter=(Action=HoldToSeeEssentials)
 IK_Enter=(Action=HubMenu)
 IK_F3=(Action=UserMarkersToggle)
-IK_LShift=(Action=PinModuleModfier)
-IK_LShift=(Action=Gallop,State=Duration,IdleTime=0.3)
-IK_LShift=(Action=PinModuleModfier)
-IK_LShift=(Action=Gallop,State=Duration,IdleTime=0.3)
 IK_None=(Action=Debug_KillAllEnemies)
 IK_None=(Action=Debug_KillTarget)
 IK_None=(Action=Debug_TeleportToPin)
@@ -1347,7 +1343,9 @@ IK_PageUp=(Action=RefreshAP)
 IK_1=(Action=CiriDrawWeapon)
 IK_Mouse5=(Action=HorseDismount)
 IK_2=(Action=CiriDrawWeaponAlternative)
-IK_LControl=(Action=FollowRoadToggle)
+IK_LShift=(Action=PinModuleModfier)
+IK_LShift=(Action=BlockCorrection)
+IK_LControl=(Action=ToggleAutoFollowRoad)
 
 [InputSettings]
 Version=43
